# Mycelium

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/mycelium/: __init__.py
src/mycelium/cli/: main.py
src/mycelium/inference/: messages.py  pipeline.py  shard.py
src/mycelium/models/: loader.py
src/mycelium/network/: discovery.py  gossip.py  protocols.py
src/mycelium/node/: config.py  host.py  identity.py
src/mycelium/utils/: logging.py  serialization.py
tests/: test_discovery.py  test_node.py  test_pipeline.py  test_serialization.py  test_shard.py
