[project]
name = "mycelium-ai"
version = "0.1.0"
description = "Decentralized Peer-to-Peer LLM Inference & Training"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
dependencies = [
    "libp2p>=0.6.0",
    "trio>=0.26.0",
    "click>=8.1",
    "torch>=2.0",
    "transformers>=4.40",
    "safetensors>=0.4",
    "msgpack>=1.0",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-trio>=0.8",
    "ruff>=0.5",
]

[project.scripts]
mycelium = "mycelium.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mycelium"]

[tool.pytest.ini_options]
trio_mode = true
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
